nodularweb/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodularweb
  namespace: default
  labels:
    app: nodularweb
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nodularweb
  template:
    metadata:
      labels:
        app: nodularweb
    spec:
      containers:
      - name: app
        image: us-east1-docker.pkg.dev/prod-prototype/default/nodularweb:next
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
