nodularweb/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodularweb
  namespace: default
  labels:
    app: nodularweb
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: nodularweb
