nodularweb/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodularweb-http-ingress
  namespace: default
  annotations:
    konghq.com/protocols: http
    konghq.com/strip-path: 'true'
  labels:
    app: nodularweb
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /nodularweb
        pathType: Prefix
        backend:
          service:
            name: nodularweb
            port:
              number: 80
